--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -1,6 +1,9 @@
 version: '3.6'
 services:
-  app:
+  certbot:
+    image: certbot/certbot
+    restart: always
+    entrypoint: "/bin/sh -c 'trap exit TERM; while :; do certbot renew; sleep 12h & wait $${!}; done;'"
     volumes:
-      - ./data/certs/nginx-selfsigned.crt:/etc/letsencrypt/live/${NGINX_HOST}/fullchain.pem
-      - ./data/certs/nginx-selfsigned.key:/etc/letsencrypt/live/${NGINX_HOST}/privkey.pem
+      - ./data/certbot/conf:/etc/letsencrypt
+      - ./data/certbot/www:/var/www/certbot
